--- a/StartupCarvaan/app/src/main/res/values/strings.xml
+++ b/StartupCarvaan/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="forget"><u>Forget Password</u></string>
+    <string name="Signup"><u>Sign Up</u></string>
+    <string name="Signin"><u>Sign In</u></string>
 </resources>
