--- a/StartupCarvaan/app/src/main/res/values/strings.xml
+++ b/StartupCarvaan/app/src/main/res/values/strings.xml
@@ -6,4 +6,15 @@
     <string name="forget"><u>Forget Password</u></string>
     <string name="Signup"><u>Sign Up</u></string>
     <string name="Signin"><u>Sign In</u></string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="myshares">myshares</string>
+    <string name="allshares">allshares</string>
+    <string name="practice">practice</string>
+    <string name="biding">biding</string>
+    <string name="mycoins">mycoins</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
