Added and fixed the intro slider activity

--- a/StartupCarvaan/app/src/main/res/values/strings.xml
+++ b/StartupCarvaan/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="skills">Skills</string>
     <string name="ratings">Star Ratings</string>
     <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
+    <string name="next">Next</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="previous">Previous</string>
+    <string name="default_web_client_id">581476801467-l8uh5j6evq8p0o28semg6n764i4oog5h.apps.googleusercontent.com</string>
 </resources>
